# CompetitiveProgramming

./: .gitmodules  CMakeLists.txt  main.cpp
CSES-Solved/: template.cpp
CSES-Solved/Sorting and Searching/: Apartments.cpp  ArrayDivision.cpp  CollectingNumbers.cpp  CollectingNumbersII.cpp  ConcertTickets.cpp  DistinctNumbers.cpp  FactoryMachines.cpp  FerrisWheel.cpp  JosephusProblemI.cpp  JosephusProblemII.cpp  MaximumSubarraySum.cpp  MaximumSubarraySumII.cpp  MissingCoinSum.cpp  MovieFestival.cpp  MovieFestivalII.cpp  NearestSmallerValues.cpp  NestedRangesCheck.cpp  NestedRangesCount.cpp  Playlist.cpp  ReadingBooks.cpp  RestaurantCustomers.cpp  RoomAllocation.cpp  SlidingWindowCost.cpp  SlidingWindowMedian.cpp  StickLengths.cpp  SubarrayDistinctValues.cpp  SubarrayDivisibility.cpp  SubarraySumsI.cpp  SubarraySumsII.cpp  SumOfFourValues.cpp  SumOfThreeValues.cpp  SumOfTwoValues.cpp  TasksAndDeadlines.cpp  Towers.cpp  TrafficLights.cpp
CSES/DynamicProgramming/: ArrayDescription.cpp  BookShop.cpp  CoinCombinationsI.cpp  CoinCombinationsII.cpp  CountingNumbers.cpp  CountingTilings.cpp  CountingTowers.cpp  DiceCombinations.cpp  EditDistance.cpp  ElevatorRides.cpp  GridPaths.cpp  IncreasingSubsequence.cpp  MinimizingCoins.cpp  MoneySums.cpp  Projects.cpp  RectangleCutting.cpp  RemovalGame.cpp  RemovingDigits.cpp  TwoSetsII.cpp
CSES/Geometry/: ConvexHull.cpp  LineSegmentIntersection.cpp  MinimumEuclideanDistance.cpp  PointInPolygon.cpp  PointLocationTest.cpp  PolygonArea.cpp  PolygonLatticePoints.cpp
CSES/RangeQueries/: DynamicRangeMinimumQueries.cpp  DynamicRangeSumQueries.cpp  ForestQueries.cpp  HotelQueries.cpp  ListRemovals.cpp  PizzeriaQueries.cpp  PrefixSumQueries.cpp  RangeUpdateQueries.cpp  RangeXorQueries.cpp  StaticRangeMinimumQueries.cpp  StaticRangeSumQueries.cpp
CSES/SortingAndSearching/: Apartments.cpp  ArrayDivision.cpp  CollectingNumbers.cpp  CollectingNumbersII.cpp  ConcertTickets.cpp  DistinctNumbers.cpp  FactoryMachines.cpp  FerrisWheel.cpp  JosephusProblemI.cpp  JosephusProblemII.cpp  MaximumSubarraySum.cpp  MaximumSubarraySumII.cpp  MissingCoinSum.cpp  MovieFestival.cpp  MovieFestivalII.cpp  NearestSmallerValues.cpp  NestedRangesCheck.cpp  NestedRangesCount.cpp  Playlist.cpp  ReadingBooks.cpp  RestaurantCustomers.cpp  RoomAllocation.cpp  SlidingWindowCost.cpp  SlidingWindowMedian.cpp  StickLengths.cpp  SubarrayDistinctValues.cpp  SubarrayDivisibility.cpp  SubarraySumI.cpp  SubarraySumII.cpp  SumOfFourValues.cpp  SumOfThreeValues.cpp  SumOfTwoValues.cpp  TasksAndDeadlines.cpp  Towers.cpp  TrafficLights.cpp
CodeForces/: Snippets.cpp  Test.cpp
CodeForces/1000/: ArpasHardExamAndMehrdadsNaiveCheat.cpp  AssemblyViaRemainders.cpp  BadUglyNumbers.cpp  BalancedShuffle.cpp  (+55 more)
ICPC/: AbbeyCourtyard.cpp  CrossedLadders.cpp  Escaping.cpp  Polyhydra.cpp  Quadrants.cpp  Triangles.cpp
LCPC/: AbbeyCourtyard.cpp  CrossedLadders.cpp  Escaping.cpp  IdealPyramid.cpp  Polyhydra.cpp  Quadrants.cpp  Triangles.cpp
(+290 files in other folders)
