cmake_minimum_required(VERSION 3.27)
project(Competitive)

set(CMAKE_CXX_STANDARD 20)

add_executable(Competitive main.cpp
        "CSES-Solved/Sorting and Searching/DistinctNumbers.cpp"
        "CSES-Solved/Sorting and Searching/Apartments.cpp"
        "CSES-Solved/Sorting and Searching/FerrisWheel.cpp"
        "CSES-Solved/Sorting and Searching/ConcertTickets.cpp"
        "CSES-Solved/Sorting and Searching/RestaurantCustomers.cpp"
        "CSES-Solved/Sorting and Searching/MovieFestival.cpp"
        "CSES-Solved/Sorting and Searching/SumOfTwoValues.cpp"
        "CSES-Solved/Sorting and Searching/MaximumSubarraySum.cpp"
        "CSES-Solved/Sorting and Searching/StickLengths.cpp"
        "CSES-Solved/Sorting and Searching/MissingCoinSum.cpp"
        "CSES-Solved/Sorting and Searching/CollectingNumbers.cpp"
        "CSES-Solved/Sorting and Searching/CollectingNumbersII.cpp"
        "CSES-Solved/Sorting and Searching/Playlist.cpp"
        "CSES-Solved/Sorting and Searching/Towers.cpp"
        "CSES-Solved/Sorting and Searching/TrafficLights.cpp"
        "CSES-Solved/Sorting and Searching/JosephusProblemI.cpp"
        "CSES-Solved/Sorting and Searching/JosephusProblemII.cpp"
        "CSES-Solved/Sorting and Searching/NestedRangesCheck.cpp"
        "CSES-Solved/Sorting and Searching/NestedRangesCount.cpp"
        "CSES-Solved/Sorting and Searching/RoomAllocation.cpp"
        "CSES-Solved/Sorting and Searching/FactoryMachines.cpp"
        "CSES-Solved/Sorting and Searching/TasksAndDeadlines.cpp"
        "CSES-Solved/Sorting and Searching/ReadingBooks.cpp"
        "CSES-Solved/Sorting and Searching/SumOfThreeValues.cpp"
        "CSES-Solved/Sorting and Searching/SumOfFourValues.cpp"
        "CSES-Solved/Sorting and Searching/NearestSmallerValues.cpp"
        "CSES-Solved/Sorting and Searching/SubarraySumsI.cpp"
        "CSES-Solved/Sorting and Searching/SubarraySumsII.cpp"
        "CSES-Solved/Sorting and Searching/SubarrayDivisibility.cpp"
        "CSES-Solved/Sorting and Searching/SubarrayDistinctValues.cpp"
        "CSES-Solved/Sorting and Searching/ArrayDivision.cpp"
        "CSES-Solved/Sorting and Searching/SlidingWindowMedian.cpp"
        "CSES-Solved/Sorting and Searching/SlidingWindowCost.cpp"
        "CSES-Solved/Sorting and Searching/MovieFestivalII.cpp"
        "CSES-Solved/Sorting and Searching/MaximumSubarraySumII.cpp"
        CodeForces/Test.cpp
        CodeForces/800/SymmetricEncoding.cpp
        CodeForces/800/PhoneDesktop.cpp
        CodeForces/800/ContestProposal.cpp
        CodeForces/800/DifferentString.cpp
        CodeForces/800/MyFirstSortingProblem.cpp
        CodeForces/800/TwoFriends.cpp
        CodeForces/800/Prefiquence.cpp
        CodeForces/800/Maximize.cpp
        CodeForces/800/CardExchange.cpp
        CodeForces/800/Stickogon.cpp
        CodeForces/900/ChessForThree.cpp
)
